# metadata

./: .gitignore  CMakeLists.txt  README.md
include/: directory.h
src/: CMakeLists.txt  directory.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
